# coal-project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile_nasm  QUICKSTART.md  README.md
docs/: API_Reference.md  NASM_BUILD_GUIDE.md  PROJECT_REBUILD_SUMMARY.md  Security_Advisory.md  Technical_Report.md  User_Manual.md
include/: stealth_interceptor.inc  stealth_interceptor_nasm.inc
learning/: README.md  session_01.md  session_02.md  session_03.md  session_04.md  session_05.md  session_06.md  session_07.md  session_08.md  session_09.md  session_10.md  session_11.md  session_12.md  session_13.md  session_14.md  session_15.md  session_16.md  session_17.md  session_18.md  session_19.md  session_20.md  session_21.md  session_22.md  session_23.md
mini/: .gitignore  CMakeLists.txt  MINI_PROJECT_SUMMARY.md  Makefile  Makefile_nasm  README.md
mini/docs/: API_Reference.md  Security_Advisory.md  Technical_Report.md  User_Manual.md
mini/scripts/: build.bat  clean.bat  test_runner.bat
mini/src/core/: hook_engine.asm  hook_engine_nasm.asm
mini/src/demo/: demo_main.asm  demo_main_nasm.asm
mini/src/hooks/: messagebox_hook.asm  messagebox_hook_nasm.asm
mini/tests/: test_basic.asm
scripts/: build.bat  build_nasm.bat  build_nasm.sh  clean.bat  convert_masm_to_nasm.py  setup.bat  test_runner.bat
src/core/: hook_engine.asm  memory_manager.asm  register_save.asm  trampoline.asm
src/demo/: demo_main.asm
src/hooks/: file_hooks.asm  messagebox_hook.asm  network_hooks.asm  process_hooks.asm
src/utils/: debug_helpers.asm  logging.asm  string_utils.asm
tests/: test_hook_engine.asm
